compiler-tests/src/test/data/diagnostic/dependencygraph/GraphAccessorsCannotBeMutable.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

@DependencyGraph
interface Graph {
  <!DEPENDENCY_GRAPH_MUTABLE_PROPERTY!>var<!> foo: Foo
}

@Inject class Foo
